# myffmpeg

./: .gitignore  CMakeLists.txt  README.md  main.cc
dream/: CMakeLists.txt  decode_audio.cc  decode_audio2.cc  decode_video.cc  decode_video2.cc  demux.cc  demux_decode.cc  encode_audio.cc  encode_rgba.cc  encode_video.cc  encode_video2.cc  filter_video.cc  get_encode_video.cc  get_video.cc  rtmp_video.cc  rtmp_video2.cc  video.cc
include/: dream.h  x264_config.h
include/libavutil/: ffversion.h
lib/: libavcodec.so.58  libavdevice.so.58.11.100  libavdevice.so.58.9.103  libavfilter.so.7  libavfilter.so.7.84.100  libavfilter.so.7.86.100  libavformat.so.58  libavformat.so.58.44.100  libavformat.so.58.46.101  libavutil.so.56  libavutil.so.56.50.100  libavutil.so.56.54.100  libavutil.so.56.55.100  libopus.so.0.8.0  libpostproc.so.55.6.100  libpostproc.so.55.8.100  libswresample.so.3.6.100  libswresample.so.3.8.100  libswscale.so.5  libswscale.so.5.6.101  libswscale.so.5.8.100  libvpx.so.6.2.0  libx264.so.160
